css/80_app.css
/* ... */
.sidebar-component .body {
    width: 100%;
    overflow: auto;
    top: 60px;
    bottom: 0;
    position: absolute;
}

.panewrap {
    position: absolute;
    width: 200%;
    height: 100%;
    right: -100%;
}

.pane {
    position: absolute;
    width: 50%;
    top: 0;
    bottom: 30px;
}

.pane:first-child {
    left: 0;
}

.pane:last-child {
    right: 0;
}

.inspector-wrap {
    width: 100%;
    height: 100%;
    overflow: hidden;
    position: relative;
}

.inspector-hidden {
    display: none;
}

.inspector-body {
    overflow-y: scroll;
    overflow-x: hidden;
    position: absolute;
    right: 0;
    left: 0;
    bottom: 0;
}

.feature-list-pane .inspector-body,
.preset-list-pane .inspector-body {
    top: 120px;
}
.entity-editor-pane .inspector-body,
.selection-list-pane .inspector-body {
    top: 60px;
}

.inspector-inner {
    padding: 20px 20px 5px 20px;
    position: relative;
}

#sidebar .search-header .icon {
    display: block;
    position: absolute;
    left: 10px;
    top: 80px;
    pointer-events: none;
}
[dir='rtl'] #sidebar .search-header .icon {
    left: auto;
    right: 10px;
}

#sidebar .search-header input {
    position: absolute;
    top: 60px;
    height: 60px;
    width: 100%;
    padding: 5px 10px;
    border-radius: 0;
    border-width: 0;
    border-bottom-width: 1px;
    text-indent: 30px;
    font-size: 18px;
    font-weight: bold;
}


/* Feature List / Search Results
------------------------------------------------------- */
.feature-list  {
    width: 100%;
}
.no-results-item,
.geocode-item,
.feature-list-item {
    width: 100%;
    position: relative;
    border-bottom: 1px solid #ccc;
    border-radius: 0;
}

.geocode-item {
    width: 50%;
    background-color: #ccc;
    left: 25%;
    margin-top: 30px;
    border-radius: 2px;
}

[dir='rtl'] .geocode-item {
    left: -25%;
}

.geocode-item:hover {
    background-color: #aaa;
}

.feature-list-item {
    background-color: #fff;
    font-weight: bold;
    height: 40px;
    line-height: 20px;
}
.feature-list-item:hover {
    background-color: #ececec;
}
.feature-list-item button {
    background: transparent;
}
.feature-list-item .label {
    text-align: left;
    padding: 10px 10px;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    border-left: 1px solid rgba(0, 0, 0, .1);
}
[dir='rtl'] .feature-list-item .label {
    text-align: right;
}

.feature-list-item .label .icon {
    opacity: .5;
}
.feature-list-item .close {
    float: right;
    padding: 10px;
}
.feature-list-item .close .icon {
    opacity: 1;
}
.feature-list-item .entity-type {
    color: #7092ff;
}
.feature-list-item:hover .entity-type {
    color: #597be7;
}
.feature-list-item .entity-name {
    font-weight: normal;
    color: #666;
    padding-left: 10px;
}
[dir='rtl'] .feature-list-item .entity-name {
    padding-left: 0;
    padding-right: 10px;
}


/* Preset List and Icons
------------------------------------------------------- */
.preset-list  {
    width: 100%;
    padding: 20px 20px 10px 20px;
    border-bottom: 1px solid #ccc;
}

.preset-list-item {
    margin-bottom: 10px;
}

.preset-list-button-wrap {
    position: relative;
    height: 60px;
    display: flex;
}

.preset-list-button {
    width: 100%;
    height: 100%;
    position: relative;
    border: 1px solid #ccc;
    display: flex;
}
[dir='ltr'] .preset-list-button-wrap:not(.category) .preset-list-button {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}
[dir='rtl'] .preset-list-button-wrap:not(.category) .preset-list-button {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

.preset-list.filtered .preset-list-item:first-child .preset-list-button {
    background: #ececec;
}

.preset-icon-container {
    position: relative;
    width: 60px;
    height: 60px;
    text-align: center;
}
.preset-icon-container.small {
    width: 40px;
    height: 40px;
    flex: 0 0 auto;
}

.preset-icon-point-border path {
    stroke: #333;
    stroke-width: 1.5;
    fill: transparent;
}

.preset-icon-line {
    margin: auto;
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
}
[dir='ltr'] .preset-icon-line {
    left: 0;
}
[dir='rtl'] .preset-icon-line {
    right: 0;
}
.preset-icon-line path.line {
    cursor: inherit;
}
.preset-icon-line circle.vertex,
.preset-icon-fill circle.vertex {
    fill: #fff;
    stroke: rgba(0, 0, 0, 0.25);
}
.preset-icon-fill circle.midpoint {
    fill: transparent;
    stroke: rgba(0, 0, 0, 0.25);
}
/* use a consistent stroke width */
.preset-icon-line path.line.stroke {
    stroke-width: 2 !important;
}
.preset-icon-line path.line.casing {
    stroke-width: 4 !important;
}

.preset-icon-fill {
    cursor: inherit;
    margin: auto;
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
}
.preset-icon-fill path.area.stroke {
    fill: transparent;
}

.preset-icon-fill-vertex circle {
    stroke-width: 1.5px;
    stroke: #333;
    fill: #efefef;
    backface-visibility: hidden;
}

.preset-icon {
    width: 100%;
    height:100%;
    position: absolute;
    z-index: 1;
}
.preset-icon .icon {
    position: absolute;
    margin: auto;
    top: 26%;
    left: 0;
    right: 0;
    width: 48%;
    height: 48%;
}
.preset-icon-container.small .preset-icon.point-geom .icon {
    width: 32%;
    height: 32%;
    top: 30%;
}

.preset-icon.framed .icon {
    top: 30%;
    width: 40%;
    height: 40%;
}
.preset-icon.framed.line-geom .icon {
    top: 20%;
}

.preset-icon-iD .icon {
    top: 0;
    height: 100%;
    width: 100%;
}

.preset-icon-iD.framed .icon {
    top: 13%;
    width: 74%;
    height: 74%;
}
.preset-icon-iD.framed.line-geom .icon {
    top: 3%;
}
/* ... */

